Fix navbar collapse when linking to linked elements on page, utilise Javascript

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,18 +86,18 @@ nav {
 }
 
 #our-mission:target {
-    padding-top: 250px;
-    margin-top: -250px;
+    padding-top: 100px;
+    margin-top: -100px;
 }
 
 #meet-the-team:target {
-    padding-top: 250px;
-    margin-top: -250px;
+    padding-top: 100px;
+    margin-top: -100px;
 }
 
 #subscribe:target {
-    padding-top: 250px;
-    margin-top: -250px;
+    padding-top: 100px;
+    margin-top: -100px;
 }
 
 /* Main content */
